[package]
name = "pcap-parse"
version = "0.1.0"
description = "PCAP test tool for rusticata parsers"
license = "LGPL-2.1+"
keywords = ["Rusticata","pcap","protocol","parser","nom"]
homepage = "https://github.com/rusticata/pcap-parse"
repository = "https://github.com/rusticata/pcap-parse.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[dependencies]
argparse = "*"
pcap = "0.5.7"
pnet = "0.20.0"
nom = "^3.0"
log = "*"
env_logger = "*"

[dependencies.rusticata]
# path = "../rusticata"
git = "https://github.com/rusticata/rusticata.git"
