[package]
name = "pcap-parse"
version = "0.1.0"
description = "PCAP test tool for rusticata parsers"
license = "LGPL-2.1+"
keywords = ["Rusticata","pcap","protocol","parser","nom"]
homepage = "https://github.com/rusticata/pcap-parse"
repository = "https://github.com/rusticata/pcap-parse.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

[dependencies]
pnet = "0.22.0"
nom = "5.0"
log = "0.4.6"
env_logger = "0.7"
pcap-parser = { version="0.8", features=["data"] }
lazy_static = "1.2"

[dependencies.clap]
version = "2"
default-features = false

[dependencies.rusticata]
# path = "../rusticata"
git = "https://github.com/rusticata/rusticata.git"

# [patch.crates-io]
# # rusticata-macros = {path="../rusticata-macros"}
# # der-parser = {path="../der-parser"}
# # ipsec-parser = {path="../ipsec-parser"}
# # kerberos-parser = {path="../kerberos-parser"}
# # ntp-parser = {path="../ntp-parser"}
# openvpn-parser = {path="../openvpn-parser"}
# pcap-parser = {path="../pcap-parser"}
# tls-parser = {path="../tls-parser"}
# # x509-parser = {path="../x509-parser"}
# snmp-parser = {path="../snmp-parser"}
